<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical"
tools:context="com.example.student.rejestracjawizyt.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/um_w_wizyt"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/wpisz_pesel_pacjenta_dla_kt_reg_chcesz_um_wi_wizyt"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:hint="@string/podaj_numer_pesel"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="75dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_healing_black_24dp"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button_danie"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/wybierz_lekarza"
        android:textColor="@android:color/white" />

</LinearLayout>
