<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nazwisko"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:text="@string/jan_kowalski"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/specjalizacja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/dermatolog"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/button_wybierz"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/wybierz"
        android:textColor="@android:color/white"
        android:lineSpacingExtra="15dp"/>
</RelativeLayout>